traefik/yaml/ing.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik-io
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: release
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
      app.kubernetes.io/instance: release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
        app.kubernetes.io/instance: release
    spec:
      containers:
        - name: whoami
          image: containous/whoami:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http 
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: traefik-io
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: release
spec:
  ports:
    - name: http
      port: 80
  selector:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: release
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: traefik-io
  name: myingress
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: release
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  ingressClassName: traefik
  rules:
    - host: foo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
